syntax = "proto3";

package aeraki.meta_protocol_proxy.filters.local_ratelimit.v1alpha;

import "envoy/config/core/v3/base.proto";
import "envoy/type/v3/token_bucket.proto";
import "envoy/extensions/common/ratelimit/v3/ratelimit.proto";
import "envoy/config/route/v3/route_components.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.aeraki.meta_protocol_proxy.filters.local_ratelimit.v1alpha";
option java_outer_classname = "LocalRateLimitProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Local rate limit]

message LocalRateLimit {
  // The human readable prefix to use when emitting stats.
  string stat_prefix = 1 [(validate.rules).string = {min_len: 1}];
  LocalRatelimitMatch match = 2;
  envoy.type.v3.TokenBucket token_bucket = 3;
  repeated envoy.extensions.common.ratelimit.v3.LocalRateLimitDescriptor descriptors = 4;
}

message LocalRatelimitMatch {
  repeated envoy.config.route.v3.HeaderMatcher metadata = 1;
}